# pskrypt_lang

./: CMakeLists.txt  README.md  example.ps  test.ps
src/: CMakeLists.txt  a.out  asm_generate.c  asm_generate.h  asm_vars.asm  common.h  main  main.c  output  output.asm  parser.c  parser.h  test  test.asm  test.ps  testuje  testuje.asm  testuje.c  tokenizer.c  tokenizer.h
